# Physics-Engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/collision/: Collision.h
include/core/: Engine.h  PhysicsWorld.h
include/physics/: Gravity.h  Particle.h  RigidBody.h
src/collision/: Collision.cpp
src/core/: Engine.cpp  PhysicsWorld.cpp
src/physics/: Gravity.cpp  Particle.cpp  RigidBody.cpp
tests/: TestPhysicsWorld.cpp  TestPhysicsWorld.h
